refactor: 무한스크롤 응답값 통일